[gd_scene load_steps=2 format=3 uid="uid://chapterTitle001"]

[ext_resource type="Script" path="res://scripts/ChapterTitle.gd" id="1_chapter_title"]

[node name="ChapterTitle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_chapter_title")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="JapaneseTitle" type="Label" parent="CenterContainer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 80
text = "持たざる者"
horizontal_alignment = 1

[node name="Separator" type="Panel" parent="CenterContainer/TitleContainer"]
custom_minimum_size = Vector2(600, 3)
layout_mode = 2

[node name="EnglishTitle" type="Label" parent="CenterContainer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 32
text = "CHAPTER 1  THE MEAGER"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

